Revert "refactor: replace PROJECT_SOURCE_DIR to TOP"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,16 +52,15 @@ set_property(CACHE force_qt PROPERTY STRINGS OFF Qt6 Qt5)
 
 set(enlarge_lex_buffers "262144" CACHE INTERNAL "Sets the lex input and read buffers to the specified size")
 
-set(TOP "${PROJECT_SOURCE_DIR}")
-
 if(enable_coverage)
-  if("${PROJECT_BINARY_DIR}" STREQUAL "${TOP}")
-    message(FATAL_ERROR "Doxygen cannot be generated in-place, the build directory (${PROJECT_BINARY_DIR}) has to differ from the doxygen main directory (${TOP})\nPlease don't forget to remove the already created file 'CMakeCache.txt' and the directory 'CMakeFiles'!")
+  if("${PROJECT_BINARY_DIR}" STREQUAL "${PROJECT_SOURCE_DIR}")
+    message(FATAL_ERROR "Doxygen cannot be generated in-place, the build directory (${PROJECT_BINARY_DIR}) has to differ from the doxygen main directory (${PROJECT_SOURCE_DIR})\nPlease don't forget to remove the already created file 'CMakeCache.txt' and the directory 'CMakeFiles'!")
   endif()
 endif()
 
-list(APPEND CMAKE_MODULE_PATH "${TOP}/cmake")
-list(APPEND CMAKE_MODULE_PATH "${TOP}/cmake/Sanitizers")
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Sanitizers")
+set(TOP "${PROJECT_SOURCE_DIR}")
 include(version)
 
 message(STATUS "Using Cmake version ${CMAKE_VERSION}")
@@ -164,9 +163,9 @@ if(WIN32)
   if(MSVC)
     if(NOT ICONV_DIR)
       if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-        list(APPEND CMAKE_PREFIX_PATH "${TOP}/deps/iconv_winbuild/include" "${TOP}/deps/iconv_winbuild/x64")
+        list(APPEND CMAKE_PREFIX_PATH "${PROJECT_SOURCE_DIR}/deps/iconv_winbuild/include" "${PROJECT_SOURCE_DIR}/deps/iconv_winbuild/x64")
       elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-        list(APPEND CMAKE_PREFIX_PATH "${TOP}/deps/iconv_winbuild/include" "${TOP}/deps/iconv_winbuild/x86")
+        list(APPEND CMAKE_PREFIX_PATH "${PROJECT_SOURCE_DIR}/deps/iconv_winbuild/include" "${PROJECT_SOURCE_DIR}/deps/iconv_winbuild/x86")
       endif()
     else()
       list(APPEND CMAKE_PREFIX_PATH ${ICONV_DIR})
@@ -270,7 +269,7 @@ find_package(Iconv REQUIRED)
 include_directories(${Iconv_INCLUDE_DIRS})
 
 
-#set(DOXYDOCS ${TOP}/doc CACHE INTERNAL "Path to doxygen docs")
+#set(DOXYDOCS ${PROJECT_SOURCE_DIR}/doc CACHE INTERNAL "Path to doxygen docs")
 set(DOXYDOCS ${PROJECT_BINARY_DIR}/doc)
 set(ENV{DOXYGEN_DOCDIR} ${DOXYDOCS})
 set(GENERATED_SRC "${PROJECT_BINARY_DIR}/generated_src" CACHE INTERNAL "Stores generated files")
