--- a/libversion/CMakeLists.txt
+++ b/libversion/CMakeLists.txt
@@ -1,17 +1,17 @@
 # vim:ts=4:sw=4:expandtab:autoindent:
 
 # setup information for doxygen version handling
-set(PRE_CONFIGURE_DOXYGEN_VERSION_FILE "${TOP}/libversion/doxyversion.cpp.in")
+set(PRE_CONFIGURE_DOXYGEN_VERSION_FILE "${PROJECT_SOURCE_DIR}/libversion/doxyversion.cpp.in")
 set(POST_CONFIGURE_DOXYGEN_VERSION_FILE "${GENERATED_SRC}/doxyversion.cpp")
 
 # setup information for git version handling
-set(PRE_CONFIGURE_GIT_VERSION_FILE "${TOP}/libversion/gitversion.cpp.in")
+set(PRE_CONFIGURE_GIT_VERSION_FILE "${PROJECT_SOURCE_DIR}/libversion/gitversion.cpp.in")
 set(POST_CONFIGURE_GIT_VERSION_FILE "${GENERATED_SRC}/gitversion.cpp")
 set(GIT_STATE_FILE "${GENERATED_SRC}/git_state")
-set(GIT_CONFIG_DIR "${TOP}/.git")
+set(GIT_CONFIG_DIR "${PROJECT_SOURCE_DIR}/.git")
 
-include(${TOP}/cmake/git_watcher.cmake)
-include(${TOP}/cmake/doxygen_version.cmake)
+include(${PROJECT_SOURCE_DIR}/cmake/git_watcher.cmake)
+include(${PROJECT_SOURCE_DIR}/cmake/doxygen_version.cmake)
 
 include_directories(
     .
