--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -72,13 +72,13 @@ jobs:
           }
         - {
             name: "macOS Latest Release (Intel)",
-            os: macos-14,
+            os: macos-15-intel,
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
         - {
             name: "macOS Latest Debug (Intel)",
-            os: macos-14,
+            os: macos-15-intel,
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
