Add support for specifying requirements
New commands:
- \requirement define a requirement
- \satisfies associate an implementation with a requirement
- \verifies associate a test with a requirement

Loosly based on https://github.com/doxygen/doxygen/pull/11839 by Rob Mellor (dropbearrob)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -298,6 +298,7 @@ add_library(doxymain STATIC
     qhp.cpp
     reflist.cpp
     regex.cpp
+    requirement.cpp
     resourcemgr.cpp
     rtfdocvisitor.cpp
     rtfgen.cpp
