Add option to control list sorting in treeview
Commit 9cb220d forced `SORT_BRIEF_DOCS` to control sorting of both the
briefs as well as the lists in the treeview (when `GENERATE_TREEVIEW`
is enabled). This commit makes those two behaviors distinct by adding a
new option.

--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -82,6 +82,7 @@ FORCE_LOCAL_INCLUDES   = NO
 INLINE_INFO            = YES
 SORT_MEMBER_DOCS       = YES
 SORT_BRIEF_DOCS        = NO
+SORT_NAVIGATION_LISTS  = NO
 SORT_MEMBERS_CTORS_1ST = NO
 SORT_GROUP_NAMES       = NO
 SORT_BY_SCOPE_NAME     = NO
