--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -365,7 +365,11 @@ if (use_libclang)
     include_directories(${LLVM_INCLUDE_DIRS})
     add_definitions(${LLVM_DEFINITIONS})
     if (static_libclang)
-        set(CLANG_LIBS libclang clangTooling)
+        if (MSVC)
+          set(CLANG_LIBS libclang clangTooling)
+        else()
+          set(CLANG_LIBS libclang_static clangTooling)
+        endif()
         add_definitions(-DCINDEX_NO_EXPORTS)
     else() # dynamically linked version of clang
         llvm_config(doxymain USE_SHARED support)
