--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -365,7 +365,7 @@ if (use_libclang)
     include_directories(${LLVM_INCLUDE_DIRS})
     add_definitions(${LLVM_DEFINITIONS})
     if (static_libclang)
-        if (MSVC)
+        if (MSVC OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
           set(CLANG_LIBS libclang clangTooling)
         else()
           set(CLANG_LIBS libclang_static clangTooling)
